# Spotify-Hybrid-Recommender-System-MLOPS

./: .gitignore  Dockerfile  README.md  Spotify_aws_setup.txt  app.py  content_based_filtering.py  dvc.yaml  main.py  pyproject.toml  test_app.py
.dvc/: config
.github/workflows/: ci.yaml
data/: .gitignore  transformed_hybrid_data.npz
deploy/scripts/: start_docker.sh
